--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "react-socks": "^2.1.0",
     "reactstrap": "^8.4.1"
   },
   "scripts": {
@@ -34,4 +35,5 @@
       "last 1 safari version"
     ]
   }
+
 }
